# ChangeLog for media-sound/xmms
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms/Attic/ChangeLog,v 1.124 2004/05/31 07:45:35 eradicator Exp $

*xmms-1.2.10-r3 (31 May 2004)

  31 May 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-1.2.10-r2.ebuild, xmms-1.2.10-r3.ebuild:
  Fixes bugs #46900, #47761, #48891, and hopefully #51080.

  14 May 2004; Stephen P. Becker <geoman@gentoo.org> xmms-1.2.8-r4.ebuild:
  Stable on mips.

  22 Apr 2004; Travis Tilley <lv@gentoo.org> xmms-1.2.10-r1.ebuild:
  stable on amd64

  20 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> xmms-1.2.8-r4.ebuild:
  QA fixes.

  12 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-1.2.10-r1.ebuild, xmms-1.2.10-r2.ebuild, xmms-1.2.8-r4.ebuild,
  xmms-1.2.9-r2.ebuild:
  Fix automake problem in bug #40341 by adding sys-devel/gettext DEP.

  08 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-1.2.10-r1.ebuild, xmms-1.2.10-r2.ebuild, xmms-1.2.8-r4.ebuild,
  xmms-1.2.9-r2.ebuild:
  Removing block on removed alsa plugin package.

  06 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-1.2.10-r2.ebuild:
  oss USE flag for making the oss output plugin.

  06 Apr 2004; Gustavo Zacarias <gustavoz@gentoo.org> xmms-1.2.10-r1.ebuild:
  Stable on sparc

*xmms-1.2.10-r2 (04 Apr 2004)

  04 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-1.2.10-r2.ebuild:
  elibtoolize. fix bug #45720.  update to latest recode patch.

  04 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-1.2.7-r23.ebuild, xmms-1.2.7-r25.ebuild:
  Removing old ebuilds.

  03 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-1.2.10-r1.ebuild:
  Stable on x86.

  03 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-1.2.10-r1.ebuild:
  Stable on x86.

  31 Mar 2004; Chris Aniszczyk <zx@gentoo.org> xmms-1.2.10-r1.ebuild:
  Stable on hppa.
