@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms/Attic/xmms-1.2.9-r2.ebuild,v 1.9 2004/04/12 17:17:14 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms/Attic/xmms-1.2.9-r2.ebuild,v 1.10 2004/06/08 01:08:34 agriffis Exp $
 
 inherit flag-o-matic eutils
 
@@ -167,7 +167,7 @@ src_install() {
 	insinto /etc/X11/wmconfig
 	donewins xmms/xmms.wmconfig xmms
 
-	if [ `use gnome` ] ; then
+	if use gnome ; then
 		insinto /usr/share/gnome/apps/Multimedia
 		doins xmms/xmms.desktop
 		dosed "s:xmms_mini.xpm:mini/xmms_mini.xpm:" \
