@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/xmms
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms/Attic/ChangeLog,v 1.124 2004/05/31 07:45:35 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms/Attic/ChangeLog,v 1.125 2004/06/08 01:08:34 agriffis Exp $
+
+  07 Jun 2004; Aron Griffis <agriffis@gentoo.org> xmms-1.2.8-r4.ebuild,
+  xmms-1.2.9-r2.ebuild:
+  Fix use invocation
 
 *xmms-1.2.10-r3 (31 May 2004)
 
